# Pico-TNC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  afsk-parameters.h  hdlc-afsk.c  pico-tnc.c  pwm-audio.c  pwm-audio.h
hdlc/: bitstuff_test.c  hdlc.sln
hdlc/hdlc/: hdlc.cpp  hdlc.vcxproj  hdlc.vcxproj.filters
hdlc/hdlc/x64/Debug/: hdlc.exe.recipe
hdlc/hdlc/x64/Debug/hdlc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hdlc.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
